# lab-vision-burn

./: .gitignore  .gitmodules  .repomixignore  Cargo.toml  README.md  SCRIPTS.md  package.json  repomix-output.xml
.github/: copilot-instructions.md
artifacts/: model.mpk
model/: Cargo.toml  build.rs
model/artifacts/: model.mpk
model/artifacts/mnist/: model.mpk
model/configs/: cifar10.json  mnist.json
model/scripts/: download_cifar10.ps1
model/src/: config.rs  data.rs  lib.rs  lib_cifar10.rs  lib_mnist.rs  main.rs  model.rs  state.rs  train.rs  web.rs  web_cifar10.rs  web_mnist.rs
src/: main.rs  train.rs
web/: package.json  pnpm-lock.yaml  svelte.config.js  vercel-build.sh  vercel.json  vite.config.ts
web/src/: app.html
web/src/components/: Cifar10ImagesGrid.svelte  DrawCanvas.svelte  ResultChart.svelte
web/src/lib/cifar10/: lab_vision_burn_model.d.ts  lab_vision_burn_model.js  lab_vision_burn_model_bg.wasm.d.ts  package.json
web/src/lib/mnist/: lab_vision_burn_model.d.ts  lab_vision_burn_model.js  lab_vision_burn_model_bg.wasm.d.ts
web/src/lib/model-wasm/: lab_vision_burn_model.d.ts  lab_vision_burn_model.js  lab_vision_burn_model_bg.wasm.d.ts
web/src/routes/: +layout.svelte  +page.js  +page.svelte
web/src/routes/cifar10/: +page.svelte
web/src/routes/mnist/: +page.js  +page.svelte
web/static/: fonts.css
